Show relative timestamps for user join date in profiles
- Change 'Joined' field to show relative time (e.g., '2 days ago')
- Create UserView struct with JoinedAgo field
- Apply formatTimeAgo() to account creation timestamp
- Consistent with post timestamp formatting

--- a/web/templates/profile.html
+++ b/web/templates/profile.html
@@ -119,7 +119,7 @@
             {{if .User.Summary}}
             <p><strong>Bio:</strong> {{.User.Summary}}</p>
             {{end}}
-            <p><strong>Joined:</strong> {{.User.CreatedAt}}</p>
+            <p><strong>Joined:</strong> {{.User.JoinedAgo}}</p>
         </div>
     </div>
 
