Add demo GIF, update README with Markdown links info
Replace screenshot with demo.gif in README and add Markdown link feature
details. Remove development-plan.md and screenshot.png. Add demo.tape
for VHS demo generation. Improve create user TUI layout and width
handling. Update SSH instructions in web templates.

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -325,7 +325,7 @@
                     <h3>ssh-first fediverse blog</h3>
                     <div class="info-box-content">
                         <p>Connect via SSH to start posting:</p>
-                        <code>ssh -p {{.SSHPort}} {{.Host}}</code>
+                        <code>ssh -p {{.SSHPort}} YourIpOrDomain</code>
                         <p style="margin-top: 15px">
                             On first connection, you'll be prompted to choose a
                             username. After that, you can create posts, follow
